--- a/Proyecto/Proyecto/appsettings.json
+++ b/Proyecto/Proyecto/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Proyecto-2281884A-406D-4397-9087-F713A22B4B85;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-R8H02AK9; Initial Catalog=Proyecto; Integrated Security=False; User ID=sa; Password=1234"
   },
   "Logging": {
     "LogLevel": {
